Adding stylings to styles.css

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 
 <body>
     <section class="memory-game">
-        <div class="memory-card" data-framework="Hearts">
-            <img class="front" src="img/ace_hearts" alt="Hearts" />
+         <div class="memory-card" data-framework="Hearts">
+            <img class="front" src="img/ace_hearts.jpg" alt="Hearts" />
             <img class="back" src="img/red.jpg" alt="Red" />
         </div>
         <div class="memory-card" data-framework="Hearts">
-            <img class="front" src="img/ace_hearts" alt="Hearts" />
+            <img class="front" src="img/ace_hearts.jpg" alt="Hearts" />
             <img class="back" src="img/red.jpg" alt="Red" />
         </div>
         <div class="memory-card" data-framework="Diamonds">
             <img class="front" src="img/ace_diamonds.jpg" alt="Diamonds" />
-            <img class="back" src="img/red.jpeg" alt="Red" />
+            <img class="back" src="img/red.jpg" alt="Red" />
         </div>
         <div class="memory-card" data-framework="Diamonds">
             <img class="front" src="img/ace_diamonds.jpg" alt="Diamonds" />
-            <img class="back" src="img/red.jpeg" alt="Red" />
+            <img class="back" src="img/red.jpg" alt="Red" />
         </div>
 
         <div class="memory-card" data-framework="Clubs">
