Add google fonts on  style.css, change images in memory.card classes on index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
 
     <title>Memory Game</title>
-    <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" />
     
     <link rel="stylesheet" href="assets/styles.css">
 </head>
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Memory Game</h1>
+            <h1>The Simpsons Memory Game</h1>
         </header>
         <section class="score-panel">
             <ul class="stars">
@@ -32,61 +32,61 @@
 
         </section>
         <section class="memory-game">
-            <div class="memory-card" data-framework="Hearts">
-                <img class="front" src="img/ace_hearts.jpg" alt="Hearts" />
-                <img class="back" src="img/red.jpg" alt="Red" />
+            <div class="memory-card" data-framework="Bart">
+                <img class="front" src="img/bart.jpg" alt="Bart" />
+                <img class="back" src="img/back2.jpg" alt="Back" />
             </div>
-            <div class="memory-card" data-framework="Hearts">
-                <img class="front" src="img/ace_hearts.jpg" alt="Hearts" />
-                <img class="back" src="img/red.jpg" alt="Red" />
+          <div class="memory-card" data-framework="Bart">
+                <img class="front" src="img/bart.jpg" alt="Bart" />
+                <img class="back" src="img/back2.jpg" alt="Back" />
             </div>
-            <div class="memory-card" data-framework="Diamonds">
-                <img class="front" src="img/ace_diamonds.jpg" alt="Diamonds" />
-                <img class="back" src="img/red.jpg" alt="Red" />
+            <div class="memory-card" data-framework="Lisa">
+                <img class="front" src="img/lisa2.jpg" alt="Lisa" />
+                <img class="back" src="img/back2.jpg" alt="Back" />
             </div>
-            <div class="memory-card" data-framework="Diamonds">
-                <img class="front" src="img/ace_diamonds.jpg" alt="Diamonds" />
-                <img class="back" src="img/red.jpg" alt="Red" />
-            </div>
-
-            <div class="memory-card" data-framework="Clubs">
-                <img class="front" src="img/ace_clubs.jpg" alt="Clubs" />
-                <img class="back" src="img/red.jpg" alt="Red" />
-            </div>
-            <div class="memory-card" data-framework="Clubs">
-                <img class="front" src="img/ace_clubs.jpg" alt="Clubs" />
-                <img class="back" src="img/red.jpg" alt="Red" />
+            <div class="memory-card" data-framework="Lisa">
+                <img class="front" src="img/lisa2.jpg" alt="Lisa" />
+                <img class="back" src="img/back2.jpg" alt="Back" />
             </div>
 
-            <div class="memory-card" data-framework="Spades">
-                <img class="front" src="img/ace_spades.jpg" alt="Spades" />
-                <img class="back" src="img/red.jpg" alt="Red" />
+            <div class="memory-card" data-framework="Homer">
+                <img class="front" src="img/homer.jpg" alt="Homer" />
+                <img class="back" src="img/back2.jpg" alt="Back" />
             </div>
-            <div class="memory-card" data-framework="Spades">
-                <img class="front" src="img/ace_spades.jpg" alt="Spades" />
-                <img class="back" src="img/red.jpg" alt="Red" />
-            </div>
-
-            <div class="memory-card" data-framework="King">
-                <img class="front" src="img/king.jpg" alt="King" />
-                <img class="back" src="img/red.jpg" alt="Red" />
-            </div>
-            <div class="memory-card" data-framework="King">
-                <img class="front" src="img/king.jpg" alt="King" />
-                <img class="back" src="img/red.jpg" alt="Red" />
+            <div class="memory-card" data-framework="Homer">
+                <img class="front" src="img/homer.jpg" alt="Homer" />
+                <img class="back" src="img/back2.jpg" alt="Back" />
             </div>
 
-            <div class="memory-card" data-framework="Queen">
-                <img class="front" src="img/queen.jpg" alt="Queen" />
-                <img class="back" src="img/red.jpg" alt="Red" />
+            <div class="memory-card" data-framework="Marge">
+                <img class="front" src="img/marge.jpg" alt="Marge" />
+                <img class="back" src="img/back2.jpg" alt="Back" />
             </div>
-            <div class="memory-card" data-framework="Queen">
-                <img class="front" src="img/queen.jpg" alt="Queen" />
-                <img class="back" src="img/red.jpg" alt="Red" />
+            <div class="memory-card" data-framework="Marge">
+                <img class="front" src="img/marge.jpg" alt="Marge" />
+                <img class="back" src="img/back2.jpg" alt="Back" />
+            </div>
+
+            <div class="memory-card" data-framework="Maggie">
+                <img class="front" src="img/maggie.jpg" alt="Maggie" />
+                <img class="back" src="img/back2.jpg" alt="Back" />
+            </div>
+           <div class="memory-card" data-framework="Maggie">
+                <img class="front" src="img/maggie.jpg" alt="Maggie" />
+                <img class="back" src="img/back2.jpg" alt="Back" />
+            </div>
+
+            <div class="memory-card" data-framework="Simpsons">
+                <img class="front" src="img/simpsons.jpg" alt="Simpsons" />
+                <img class="back" src="img/back2.jpg" alt="Back" />
+            </div>
+            <div class="memory-card" data-framework="Simpsons">
+                <img class="front" src="img/simpsons.jpg" alt="Simpsons" />
+                <img class="back" src="img/back2.jpg" alt="Back" />
             </div>
         </section>
     </div>
-
+    <script src="https://kit.fontawesome.com/f9d6df2339.js"></script>
     <script src="assets/scripts.js"></script>
 </body>
 
