Changed title in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>Memory Game</title>
+    <title>The Simpsons Memory Game</title>
     <!-----------------------CSS & BootStrap Link------------------------------>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/styles.css">
