Formatting and commenting outsections on all pages

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             </div>
         </section>
     </div>
-<!-----------------------JS Link & Font Awesome------------------------------>
-        <div id="popup1" class="overlay">
+    <!---------------------------------Modal-------------------------------------->
+    <!---<div id="popup1" class="overlay">
             <div class="popup">
                 <h2>Congratulations 🎉</h2>
                 <a class="close" href="#">×</a>
@@ -105,7 +105,7 @@
                     <a>Play again 😄</a>
                 </button>
             </div>
-        </div>
+        </div>--->
     <!-----------------------JS Link & Font Awesome------------------------------>
     <script src="https://kit.fontawesome.com/f9d6df2339.js"></script>
     <script src="assets/scripts.js"></script>
