--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="timer">
             </div>
 
-            <div class="restart" onclick="startGame()">
+            <div class="restart" onclick="resetGame()">
                 <i class="fa fa-repeat"></i>
             </div>
 
