Added congratulations, closeModal and playAgain functions in scripts.js and uncommented modal sections in styles.css and index.html

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
         </section>
     </div>
     <!---------------------------------Modal-------------------------------------->
-    <!---<div id="popup1" class="overlay">
+    <div id="popup1" class="overlay">
             <div class="popup">
                 <h2>Congratulations 🎉</h2>
-                <a class="close" href="#">×</a>
+                <a class="close" onclick="closeModal()">×</a>
                 <div class="content-1">
                     Congratulations you're a winner 🎉🎉
                 </div>
@@ -105,7 +105,7 @@
                     <a>Play again 😄</a>
                 </button>
             </div>
-        </div>--->
+        </div>
     <!-----------------------JS Link & Font Awesome------------------------------>
     <script src="https://kit.fontawesome.com/f9d6df2339.js"></script>
     <script src="assets/scripts.js"></script>
