Updating README.md file

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                     <p>in <span id="totalTime"> </span> </p>
                     <p>Rating: <span id="starRating"></span></p>
                 </div>
-                <button id="play-again" onclick="playAgain()">
-                    <a>Play again 😄</a>
-                </button>
+                <button id="play-again" onclick="playAgain()">Play again 😄</button>
+                    <a></a>
+                
             </div>
         </div>
     </div>
